--- a/index.html
+++ b/index.html
@@ -65,15 +65,11 @@
 
 @font-face {
     font-family: 'GE Dinar One';
-    font-weight: lighter;
-    src: url("{% static 'fonts/ge-dinar-one-light.woff' %}");
+    font-weight: normal;
+    src: url(fonts/ge-dinar-one-med.woff);
 }
 
-@font-face {
-    font-family: 'GE Dinar One';
-    font-weight: normal;
-    src: url("{% static 'fonts/ge-dinar-one-med.woff' %}");
-}
+
 
 body {
   font-family: 'GE Dinar One', serif;
@@ -153,11 +149,7 @@ body {
 									</div>
 
 								<p class="fh5co-social text-center" id="fh5co-intro-social">
-									<a href="#" class="to-animate"><i class="icon-facebook-with-circle"></i></a>
-									<a href="#" class="to-animate"><i class="icon-twitter-with-circle"></i></a>
-									<a href="#" class="to-animate"><i class="icon-dribbble-with-circle"></i></a>
-									<a href="#" class="to-animate"><i class="icon-google-with-circle"></i></a>
-									<a href="#" class="to-animate"><i class="icon-instagram-with-circle"></i></a>
+									<a href="https://twitter.com/TEDxKSAUHS" class="to-animate"><i class="icon-twitter-with-circle"></i></a>
 								</p>
 							</div>
 						</div>
@@ -201,7 +193,7 @@ body {
 			</div>
 			<!-- END .container -->
 
-			<div class="fh5co-section-seperator" style="background-image: url(images/tedxlaw.jpg);" data-stellar-background-ratio="0.5">
+			<div class="fh5co-section-seperator" style="background-image: url(images/tedx.jpg);" data-stellar-background-ratio="0.5">
 				<div class="fh5co-overlay"></div>
 				<div class="container" id="counter-animate">
 					<div class="fh5co-section-content-wrap">
@@ -265,19 +257,34 @@ body {
 								</a>
 							</div>
 							<div class="col-md-6 col-sm-6 col-xs-6 col-xxs-12 fh5co-project to-animate">
-								<a href="images/musab.JPG" class="image-popup">
-									<div class="fh5co-overlay-text">مصعب الشريف</div>
+								<a href="images/saud.jpg" class="image-popup">
+									<div class="fh5co-overlay-text">م. سعود العواد</div>
 									<div class="fh5co-overlay"></div>
-									<img src="images/musab.JPG" alt="Free HTML5 Template" class="img-responsive">
+									<img src="images/saud.jpg" alt="Free HTML5 Template" class="img-responsive">
 								</a>
 							</div>
 							<div class="col-md-6 col-sm-6 col-xs-6 col-xxs-12 fh5co-project to-animate">
-								<a href="images/noor.JPG" class="image-popup">
-									<div class="fh5co-overlay-text">نور الأحمدي</div>
+								<a href="images/meno.JPG" class="image-popup">
+									<div class="fh5co-overlay-text">?</div>
 									<div class="fh5co-overlay"></div>
-									<img src="images/noor.JPG" alt="Free HTML5 Template" class="img-responsive">
+									<img src="images/meno.JPG" alt="Free HTML5 Template" class="img-responsive">
 								</a>
 							</div>
+							<div class="col-md-6 col-sm-6 col-xs-6 col-xxs-12 fh5co-project to-animate">
+								<a href="images/meno.JPG" class="image-popup">
+									<div class="fh5co-overlay-text">?</div>
+									<div class="fh5co-overlay"></div>
+									<img src="images/meno.JPG" alt="Free HTML5 Template" class="img-responsive">
+								</a>
+							</div>
+							<div class="col-md-6 col-sm-6 col-xs-6 col-xxs-12 fh5co-project to-animate">
+								<a href="images/meno.JPG" class="image-popup">
+									<div class="fh5co-overlay-text">?</div>
+									<div class="fh5co-overlay"></div>
+									<img src="images/meno.JPG" alt="Free HTML5 Template" class="img-responsive">
+								</a>
+							</div>
+
 
 						</div>
 					</div>
@@ -294,7 +301,7 @@ body {
 							<div class="row">
 								<div class="col-md-9 col-md-offset-1 fh5co-testimony to-animate">
 									<blockquote>
-										<p class="text-center quote" dir="rtl">جميع أحلامنا تمثل (<b>س</b>)، <br>كل ما نحتاجه هو المعادلة <em>الصحيحة</em>. <cite class="author"></cite></p>
+										<p class="text-center quote" dir="rtl">"جميع أحلامنا تمثل (<b>س</b>)، <br>كل ما نحتاجه هو المعادلة الصحيحة."<cite class="author"></cite></p>
 									</blockquote>
 								</div>
 							</div>
@@ -321,13 +328,12 @@ body {
 										</div>
 										<div class="fh5co-accordion-body">
 											<p>
-												-نواف  العوفي <br>
-												-غاده  ال مجري <br>
-												-زياد  العنزي <br>
-												- ساره  السعدون <br>
-												- صبا  المطيري <br>
-												- تالا  البصري
-
+												Ghada almujarri <br>
+												Nawaf Aloufi <br>
+												Zyad alanizi <br>
+												Sara alsudon <br>
+												Seba almutairi <br>
+												Tala albasri <br>
 											</p>
 										</div>
 									</div>
@@ -339,7 +345,13 @@ body {
 											<h3><i class="icon-clapperboard"></i>Stage Team</h3>
 										</div>
 										<div class="fh5co-accordion-body active">
-											<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Earum distinctio at molestias atque in adipisci vero porro nam, enim excepturi esse. Quisquam, cupiditate inventore excepturi totam sint, nisi illo sit dicta dignissimos amet alias facilis molestiae in quaerat. Veritatis doloribus voluptates esse culpa perferendis laudantium sunt dolor laborum, odit dolores.</p>
+											<p>
+												Abdulrahman Banaeem <br>
+												Khaled  Alhindi <br>
+												Mashael  Alabdali <br>
+												Lina  Alsherbini <br>
+												Aseel  AlGhamdi <br>
+											</p>
 										</div>
 									</div>
 									<!-- END .fh5co-accordion -->
@@ -350,7 +362,20 @@ body {
 											<h3><i class="icon-hand"></i>Venue Team</h3>
 										</div>
 										<div class="fh5co-accordion-body">
-											<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Earum distinctio at molestias atque in adipisci vero porro nam, enim excepturi esse. Quisquam, cupiditate inventore excepturi totam sint, nisi illo sit dicta dignissimos amet alias facilis molestiae in quaerat. Veritatis doloribus voluptates esse culpa perferendis laudantium sunt dolor laborum, odit dolores.</p>
+											<p>
+												Fahad bahanan <br>
+												Muhannad  Al Thunayan <br>
+												Meral  Alyami <br>
+												Shorouq  AlJarallah <br>
+												Sarah Almujarri <br>
+												Rayan Alshweriqh <br>
+												Ghada Alharbi <br>
+												Hessa Alodwani <br>
+												Johara Almazyad <br>
+												Faisal Alsudairy <br>
+												Mohammed Alshahrani <br>
+
+											</p>
 										</div>
 									</div>
 									<!-- END .fh5co-accordion -->
@@ -361,7 +386,11 @@ body {
 											<h3><i class="icon-laptop"></i>Organising and <br> Registration Team</h3>
 										</div>
 										<div class="fh5co-accordion-body">
-											<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Earum distinctio at molestias atque in adipisci vero porro nam, enim excepturi esse. Quisquam, cupiditate inventore excepturi totam sint, nisi illo sit dicta dignissimos amet alias facilis molestiae in quaerat. Veritatis doloribus voluptates esse culpa perferendis laudantium sunt dolor laborum, odit dolores.</p>
+											<p>
+												Fahad Alnafisash <br>
+												Raed Altowairki <br>
+												Deemah Alsaqabi <br>
+											</p>
 										</div>
 									</div>
 									<!-- END .fh5co-accordion -->
@@ -372,7 +401,18 @@ body {
 											<h3><i class="icon-mobile"></i>Content team</h3>
 										</div>
 										<div class="fh5co-accordion-body">
-											<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Earum distinctio at molestias atque in adipisci vero porro nam, enim excepturi esse. Quisquam, cupiditate inventore excepturi totam sint, nisi illo sit dicta dignissimos amet alias facilis molestiae in quaerat. Veritatis doloribus voluptates esse culpa perferendis laudantium sunt dolor laborum, odit dolores.</p>
+											<p>
+
+												Ahmad alhowaimani <br>
+												Rafeef  Alhajress <br>
+												Hassan  Khdary <br>
+												Yaser  Alenazi <br>
+												Zainab Al Shngeeti <br>
+												Atheer Almutairi <br>
+												Abdulkarem Alharbi <br>
+												Noura Almohaimied <br>
+
+											</p>
 										</div>
 									</div>
 									<!-- END .fh5co-accordion -->
@@ -383,7 +423,23 @@ body {
 											<h3><i class="icon-mail"></i>Media Team</h3>
 										</div>
 										<div class="fh5co-accordion-body">
-											<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Earum distinctio at molestias atque in adipisci vero porro nam, enim excepturi esse. Quisquam, cupiditate inventore excepturi totam sint, nisi illo sit dicta dignissimos amet alias facilis molestiae in quaerat. Veritatis doloribus voluptates esse culpa perferendis laudantium sunt dolor laborum, odit dolores.</p>
+											<p>
+
+												Feras Alsulaiman <br>
+												Abdulrahman Aljahani <br>
+												Rand Alazaz <br>
+												Abdulrahman Alqahtani <br>
+												Fatimah Alowirdi <br>
+												Hend  Salih <br>
+												Khalid Aldamiri <br>
+												Meshal Alkheraiji <br>
+												shaden  Almushawwah <br>
+												Abdulrahman  AlQumayzi <br>
+												Atheer Alfalaj <br>
+												Osama Alaqel <br>
+												Abdulrahman Aljuraisi <br>
+
+											</p>
 										</div>
 									</div>
 									<!-- END .fh5co-accordion -->
@@ -406,8 +462,6 @@ body {
 				<div class="row row-padded">
 					<div class="col-md-8 col-md-push-4">
 						<p class="to-animate">"This independent TEDx event is operated under license from TED."</p>
-						<p class="to-animate">بُني بأيدٍ طلابية. حقك في النسخ مكفول.</p>
-
 					</div>
 				</div>
 			</div>
@@ -485,7 +539,7 @@ function initializeClock(id, endtime) {
   var timeinterval = setInterval(updateClock, 1000);
 }
 
-var deadline = new Date(Date.parse(new Date()) + 15 * 24 * 60 * 60 * 1000);
+var deadline = new Date(2017, 3, 15, 15, 00, 00);
 initializeClock('clockdiv', deadline);
 </script>
 
