Add noor's photo

--- a/index.html
+++ b/index.html
@@ -232,56 +232,56 @@ body {
 								<a href="images/tarad.jpg" class="image-popup">
 									<div class="fh5co-overlay-text">طراد باسنبل</div>
 									<div class="fh5co-overlay"></div>
-									<img src="images/tarad.jpg" alt="Free HTML5 Template" class="img-responsive">
+									<img src="images/tarad.jpg" alt="TEDxKSAUHS Speaker" class="img-responsive">
 								</a>
 							</div>
 							<div class="col-md-6 col-sm-6 col-xs-6 col-xxs-12 fh5co-project to-animate">
 								<a href="images/sara.jpg" class="image-popup">
 									<div class="fh5co-overlay-text">سارة الحقباني</div>
 									<div class="fh5co-overlay"></div>
-									<img src="images/sara.jpg" alt="Free HTML5 Template" class="img-responsive">
+									<img src="images/sara.jpg" alt="TEDxKSAUHS Speaker" class="img-responsive">
 								</a>
 							</div>
 							<div class="col-md-6 col-sm-6 col-xs-6 col-xxs-12 fh5co-project to-animate">
 								<a href="images/abdull.JPG" class="image-popup">
 									<div class="fh5co-overlay-text">عبدالرحمن باجنيد</div>
 									<div class="fh5co-overlay"></div>
-									<img src="images/abdull.JPG" alt="Free HTML5 Template" class="img-responsive">
+									<img src="images/abdull.JPG" alt="TEDxKSAUHS Speaker" class="img-responsive">
 								</a>
 							</div>
 							<div class="col-md-6 col-sm-6 col-xs-6 col-xxs-12 fh5co-project to-animate">
 								<a href="images/hind.JPG" class="image-popup">
 									<div class="fh5co-overlay-text">د.هند المديميغ</div>
 									<div class="fh5co-overlay"></div>
-									<img src="images/hind.JPG" alt="Free HTML5 Template" class="img-responsive">
+									<img src="images/hind.JPG" alt="TEDxKSAUHS Speaker" class="img-responsive">
 								</a>
 							</div>
 							<div class="col-md-6 col-sm-6 col-xs-6 col-xxs-12 fh5co-project to-animate">
 								<a href="images/saud.jpg" class="image-popup">
 									<div class="fh5co-overlay-text">م. سعود العواد</div>
 									<div class="fh5co-overlay"></div>
-									<img src="images/saud.jpg" alt="Free HTML5 Template" class="img-responsive">
+									<img src="images/saud.jpg" alt="TEDxKSAUHS Speaker" class="img-responsive">
+								</a>
+							</div>
+							<div class="col-md-6 col-sm-6 col-xs-6 col-xxs-12 fh5co-project to-animate">
+								<a href="images/noor.JPG" class="image-popup">
+									<div class="fh5co-overlay-text">نور الأحمدي</div>
+									<div class="fh5co-overlay"></div>
+									<img src="images/noor.JPG" alt="TEDxKSAUHS Speaker" class="img-responsive">
 								</a>
 							</div>
 							<div class="col-md-6 col-sm-6 col-xs-6 col-xxs-12 fh5co-project to-animate">
 								<a href="images/meno.JPG" class="image-popup">
 									<div class="fh5co-overlay-text">?</div>
 									<div class="fh5co-overlay"></div>
-									<img src="images/meno.JPG" alt="Free HTML5 Template" class="img-responsive">
+									<img src="images/meno.JPG" alt="TEDxKSAUHS Speaker" class="img-responsive">
 								</a>
 							</div>
 							<div class="col-md-6 col-sm-6 col-xs-6 col-xxs-12 fh5co-project to-animate">
 								<a href="images/meno.JPG" class="image-popup">
 									<div class="fh5co-overlay-text">?</div>
 									<div class="fh5co-overlay"></div>
-									<img src="images/meno.JPG" alt="Free HTML5 Template" class="img-responsive">
-								</a>
-							</div>
-							<div class="col-md-6 col-sm-6 col-xs-6 col-xxs-12 fh5co-project to-animate">
-								<a href="images/meno.JPG" class="image-popup">
-									<div class="fh5co-overlay-text">?</div>
-									<div class="fh5co-overlay"></div>
-									<img src="images/meno.JPG" alt="Free HTML5 Template" class="img-responsive">
+									<img src="images/meno.JPG" alt="TEDxKSAUHS Speaker" class="img-responsive">
 								</a>
 							</div>
 
@@ -460,8 +460,10 @@ body {
 		<footer role="contentinfo" id="fh5co-footer">
 			<div class="container" id="footer-animate">
 				<div class="row row-padded">
-					<div class="col-md-8 col-md-push-4">
-						<p class="to-animate">"This independent TEDx event is operated under license from TED."</p>
+					<div class="col-xs-12">
+						<p class="to-animate">This independent TEDx event is operated under license from TED.</p>
+                                                <hr>
+						<p dir="rtl" class="to-animate text-center">بُني بأيدٍ طلابيّة. حقّك في النسخ مكفول.</p>
 					</div>
 				</div>
 			</div>
