--- a/index.html
+++ b/index.html
@@ -114,6 +114,12 @@ body {
 
 }
 
+.english-field {
+    direction: ltr;
+    text-align: left;
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
+
 </style>
 </head>
 	<body>
@@ -149,7 +155,7 @@ body {
 									</div>
 
 								<p class="fh5co-social text-center" id="fh5co-intro-social">
-									<a href="https://twitter.com/TEDxKSAUHS" class="to-animate"><i class="icon-twitter-with-circle"></i></a>
+									<a target="_blank" href="https://twitter.com/TEDxKSAUHS" class="to-animate"><i class="icon-twitter-with-circle"></i></a>
 								</p>
 							</div>
 						</div>
@@ -167,21 +173,21 @@ body {
 					<div class="col-md-8 col-md-push-1">
 						<div class="row">
 							<div class="col-md-6 to-animate">
-								<h6 class="fh5co-section-heading to-animate"><b>About <span style="color: #ff2b06;">TED</span></b></h6>
-											<p>
+								<h6 class="fh5co-section-heading to-animate english-field"><b>About <span style="color: #ff2b06;">TED</span></b></h6>
+											<p  class="english-field">
 												TED is a nonprofit organization devoted to Ideas Worth Spreading. Started as a four-day conference in California 30 years ago, TED has grown to support its mission with multiple initiatives. The two annual TED Conferences invite the world's leading thinkers and doers to speak for 18 minutes or less. Many of these talks are then made available, free, at TED.com. TED speakers have included Bill Gates, Jane Goodall, Elizabeth Gilbert, Sir Richard Branson, Nandan Nilekani, Philippe Starck, Ngozi Okonjo-Iweala, Sal Khan and Daniel Kahneman.
 											</p>
-											<p class="see-more text-faded">
+											<p class="see-more text-faded english-field">
 												The annual TED Conference takes place each spring in Vancouver, British Columbia. TED's media initiatives include TED.com, where new TED Talks are posted daily; the Open Translation Project, which provides subtitles and interactive transcripts as well as translations from volunteers worldwide; the educational initiative TED-Ed. TED has established the annual TED Prize, where exceptional individuals with a wish to change the world get help translating their wishes into action; TEDx, which supports individuals or groups in hosting local, self- organized TED-style events around the world, and the TED Fellows program, helping world-changing innovators from around the globe to amplify the impact of their remarkable projects and activities.
 											</P>
-											<p class="see-more text-faded">
+											<p class="see-more text-faded english-field">
 												Follow TED on <a href="http://twitter.com/TEDTalks" target="_blank">Twiiter</a>, or on <a href="http://www.facebook.com/TED" target="_blank">Facebook</a>.
 											</p>
 											<button data-action="more" class="btn btn-success btn-sm" id="see-more">See more</button>
 							</div>
 							<div class="col-md-6 to-animate">
 								<h6 class="fh5co-section-heading to-animate"><b>About <span style="color: #ff2b06;">TED<sup>x</sup></span></b></h6>
-								<p>TEDx, x = independently organized event
+								<p class="english-field">TEDx, x = independently organized event
 									In the spirit of ideas worth spreading, TEDx is a program of local, self-organized events that bring people together to share a TED-like experience. At a TEDx event, TED Talks video and live speakers combine to spark deep discussion and connection. These local, self-organized events are branded TEDx, where x = independently organized TED event. The TED Conference provides general guidance for the TEDx program, but individual TEDx events are self-organized. (Subject to certain rules and regulations.)
 								</p>
 
@@ -327,7 +333,7 @@ body {
 											<h3><i class="icon-man"></i>Leaders</h3>
 										</div>
 										<div class="fh5co-accordion-body">
-											<p>
+											<p class="english-field">
 												Ghada almujarri <br>
 												Nawaf Aloufi <br>
 												Zyad alanizi <br>
@@ -345,7 +351,7 @@ body {
 											<h3><i class="icon-clapperboard"></i>Stage Team</h3>
 										</div>
 										<div class="fh5co-accordion-body active">
-											<p>
+											<p class="english-field">
 												Abdulrahman Banaeem <br>
 												Khaled  Alhindi <br>
 												Mashael  Alabdali <br>
@@ -362,7 +368,7 @@ body {
 											<h3><i class="icon-hand"></i>Venue Team</h3>
 										</div>
 										<div class="fh5co-accordion-body">
-											<p>
+											<p class="english-field">
 												Fahad bahanan <br>
 												Muhannad  Al Thunayan <br>
 												Meral  Alyami <br>
@@ -386,7 +392,7 @@ body {
 											<h3><i class="icon-laptop"></i>Organising and <br> Registration Team</h3>
 										</div>
 										<div class="fh5co-accordion-body">
-											<p>
+											<p class="english-field">
 												Fahad Alnafisash <br>
 												Raed Altowairki <br>
 												Deemah Alsaqabi <br>
@@ -401,7 +407,7 @@ body {
 											<h3><i class="icon-mobile"></i>Content team</h3>
 										</div>
 										<div class="fh5co-accordion-body">
-											<p>
+											<p class="english-field">
 
 												Ahmad alhowaimani <br>
 												Rafeef  Alhajress <br>
@@ -423,7 +429,7 @@ body {
 											<h3><i class="icon-mail"></i>Media Team</h3>
 										</div>
 										<div class="fh5co-accordion-body">
-											<p>
+											<p class="english-field">
 
 												Feras Alsulaiman <br>
 												Abdulrahman Aljahani <br>
@@ -461,7 +467,7 @@ body {
 			<div class="container" id="footer-animate">
 				<div class="row row-padded">
 					<div class="col-xs-12">
-						<p class="to-animate">This independent TEDx event is operated under license from TED.</p>
+						<p class="to-animate english-field">This independent TEDx event is operated under license from TED.</p>
                                                 <hr>
 						<p dir="rtl" class="to-animate text-center">بُني بأيدٍ طلابيّة. حقّك في النسخ مكفول.</p>
 					</div>
